[workspace]
resolver = "3"
members = ["sql-key-args", "xepak"]

[workspace.package]
version = "0.0.1"
edition = "2024"
homepage = "https://github.com/rustrum/xepak"
repository = "https://github.com/rustrum/xepak.git"
license-file = "LICENSE-TERMS"
description = "DSL based REST API server will be here"
keywords = ["api", "rest", "db", "proxy", "sql"]

[workspace.dependencies]
sql-key-args = { path = "./sql-key-args" }

async-lock = { version = "3.4", features = ["std"] }
env_logger = "0.11"
rhai = { version = "1.23", features = ["sync", "no_custom_syntax", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_urlencoded = "0.7"
toml = "0.9"

[package]
name = "xepak-rest"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license-file.workspace = true

[[bin]]
name = "xepak-rest"

[features]
# having getopt in lib by default would not harm much
# but it will be possible to disable default features if required
default = ["server"]
server = ["getopt3"]

[dependencies]
sql-key-args.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
toml.workspace = true

# async-trait = "0.1.89"
minicbor = { version = "2.1", features = ["std", "alloc"] }
rhai = { version = "1.23", features = ["sync", "no_custom_syntax"] }
# rhai = { version = "1.23", features = ["sync", "no_custom_syntax", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
sqlx-core = "0.8"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

actix-router = "0.5"
actix-web = { version = "4.11", features = ["rustls"] }

getopt3 = { version = "2.5.0", optional = true }
