[package]
name = "xepak"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license-file.workspace = true

[[bin]]
name = "xepak"

[features]
# having getopt in lib by default would not harm much
# but it will be possible to disable default features if required
default = ["server"]
server = ["getopt3"]

[dependencies]
serde.workspace = true
toml.workspace = true

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

actix-router = "0.5"
actix-web = { version = "4.11", features = ["rustls"] }

getopt3 = { version = "2.5.0", optional = true }
